# idatag

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENCE  README.md
clients/: TagApi.py  TagFuncRefs.py  TagMetaRebase.py  TagPcap.py  TagSource.py  TagString.py
src/: configuration.cpp  configuration.hpp  delegate.cpp  delegate.hpp  hooks_disas.cpp  hooks_disas.hpp  idatag.cpp  idatag.hpp  json.hpp  model.cpp  model.hpp  palette.cpp  palette.hpp  proxy.cpp  proxy.hpp  view.cpp  view.hpp
test/: tagtest.py
